Add session lifecycle info to controller's INFO log.
This required some plumbing, but nothing major.
